<resources>
    <string name="app_name">VodovodInfo</string>
    <string name="PERMISSION_REQUEST_TEXT">Dozvolite rad aplikacije</string>
    <string name="ERROR_TEXT">Desila se greška, molimo pokušajte opet</string>
    <string name="SETUP_DISCLAMER">Napomena: U slučaju da je ovo vaša trenutna lokacija, vašu stalnu adresu življenja možete postaviti naknadno u postavkama aplikacije</string>
    <string name="setting">Postavke</string>
    <string name="notices">Obavještenja</string>
    <string name="ERROR_DIALOG_TITLE">Dogodila se greška</string>
    <string name="ERROR_DIALOG_MESSAGE">Molimo pokušajte opet sa upaljenim GPS servisom na vašem mobitelu! Lokaciju uvijek možete naknadno promjeniti</string>
    <string name="ERROR_DIALOG_YES">Da, pokušaj opet</string>
    <string name="ERROR_DIALOG_NO">Ne</string>
    <string name="SETTINGS_TITLE">Postavke</string>
    <string name="SETTINGS_OPTIONS_ONE_CHANGE_DEFAULT_LOCATION">Postavi ponovo svoju lokaciju</string>
    <string name="SETTINGS_OPTION_ONE_OK_BUTTON_TEXT">Spremi promjenu</string>
    <string name="SETTINGS_OPTION_TWO_NOTIFICATION_SETTINGS">Postavke notifikacija</string>
    <string name="SETTINGS_OPTION_TWO_NOTIFICATION_OPTION_1">Želim primati notifikacije za moju adresu</string>
    <string name="SETTINGS_OPTION_TWO_NOTIFICATION_OPTION_2">Želim primati sve notifikacije</string>
    <string name="SETTINGS_OPTION_TWO_NOTIFICATION_OPTION_3">Ne želim primati notifikacije</string>
    <string name="SETTINGS_OPTION_THREE_TEXT">Promjeni font slova</string>
    <string name="SETTINGS_SAVE_BUTTON_TEXT">Spremi izmjene</string>
    <string name="SETTING_EXAMPLE_TEXT">Primjer teksta</string>

    <string name="ALERT_DIALOG_MULTIPLE_PLACES_TITLE">Izaberite vašu lokaciju</string>

    <string name="CANCEL">Nazad</string>
    <string name="TRYAGAIN">Pokušaj opet</string>
    <string name="TOAST_TRY_AGAIN_TEXT">Ako ovo nije vaša adresa pokušajte opet</string>
    <string name="CHANGES_SAVED">Izmjene spašene</string>
    <string name="YES">Da</string>

    <string name="NOTIFICATION_TITLE">Obavještenje</string>

    <string name="NO_LOCATION_IS_SET_UP">Molimo prvo postavite svoju lokaciju!</string>

    <string name="POSTED">Objavljeno %1$s</string>

    <!-- %1$s string
         %1$d integer-->

</resources>