<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvSettingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SETTINGS_TITLE"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="12dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvChangeDefLocation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/tvSettingTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="12dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


            <TextView
                android:id="@+id/firstOptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="68dp"
                android:padding="16dp"
                    android:text="@string/SETTINGS_OPTIONS_ONE_CHANGE_DEFAULT_LOCATION"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnOptionOneSettingExpand"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnOptionOneSettingExpand"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_baseline_arrow_drop_down_24"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginRight="16dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandableFirstOptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvChangeDefLocation"
        app:layout_constraintRight_toRightOf="@id/cvChangeDefLocation"
        app:layout_constraintLeft_toLeftOf="@id/cvChangeDefLocation"
        android:visibility="gone"
        >

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnSaveAddress"
            app:layout_constraintVertical_bias="0"
            />

        <ProgressBar
            android:id="@+id/pbMapNoticesSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/frameLayout"
            app:layout_constraintRight_toRightOf="@id/frameLayout"
            app:layout_constraintLeft_toLeftOf="@id/frameLayout"
            app:layout_constraintBottom_toBottomOf="@id/frameLayout"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btnSaveAddress"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/SETTINGS_OPTION_ONE_OK_BUTTON_TEXT"
            android:background="@drawable/border_button_black_edges"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:layout_constraintRight_toRightOf="@id/frameLayout"
            app:layout_constraintLeft_toLeftOf="@id/frameLayout"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNotificationSettings"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/expandableFirstOptionLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="12dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


            <TextView
                android:id="@+id/secondOptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="136dp"
                android:padding="16dp"
                android:text="@string/SETTINGS_OPTION_TWO_NOTIFICATION_SETTINGS"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnSettingSecondOptionExpand"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSettingSecondOptionExpand"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_baseline_arrow_drop_down_24"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginRight="16dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandableSecondOptionLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/cvNotificationSettings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/tvNotfOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="14dp"
            android:text="@string/SETTINGS_OPTION_TWO_NOTIFICATION_OPTION_1"
            app:layout_constraintRight_toLeftOf="@+id/radioGroup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvNotfOption2"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/tvNotfOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="14dp"
            android:text="@string/SETTINGS_OPTION_TWO_NOTIFICATION_OPTION_2"
            app:layout_constraintLeft_toLeftOf="@id/tvNotfOption1"
            app:layout_constraintTop_toBottomOf="@id/tvNotfOption1"
            app:layout_constraintBottom_toTopOf="@id/tvNotfOption3"/>

        <TextView
            android:id="@+id/tvNotfOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="14dp"
            android:text="@string/SETTINGS_OPTION_TWO_NOTIFICATION_OPTION_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/tvNotfOption2"
            app:layout_constraintRight_toRightOf="@id/tvNotfOption2"
            app:layout_constraintTop_toBottomOf="@id/tvNotfOption2"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvNotfOption1"
            app:layout_constraintBottom_toBottomOf="@id/tvNotfOption3">

            <RadioButton
                android:id="@+id/firstRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <RadioButton
                android:id="@+id/secondRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"/>

            <RadioButton
                android:id="@+id/thirdRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/expandableSecondOptionLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.2"
        >

        <View
            android:id="@+id/divider"
            android:background="@android:color/holo_green_light"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            />

        <TextView
            android:id="@+id/thirdOptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SETTINGS_OPTION_THREE_TEXT"
            android:padding="8dp"
            android:textSize="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="4dp"
            />

        <NumberPicker
            android:id="@+id/npSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/thirdOptionTitle"
            app:layout_constraintRight_toRightOf="@id/thirdOptionTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:id="@+id/tvExampleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SETTING_EXAMPLE_TEXT"
            android:textSize="16dp"
            android:maxLines="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/npSettings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thirdOptionTitle"
          />

        <View
            android:id="@+id/divider2"
            android:background="@android:color/holo_green_light"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_button_black_edges"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"
        android:text="@string/SETTINGS_SAVE_BUTTON_TEXT"
        android:padding="8dp"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>